Bug 365723 memory leak after closing message window (remove listeners after use). r/sr=bienvenu